# data-quality-framework

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dags/: dq_pipeline_dag.py  lineage_dag.py
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: customers_checkpoint.yml  orders_checkpoint.yml  products_checkpoint.yml
great_expectations/expectations/: customers.json  orders.json  products.json
src/checks/: anomaly_checks.py  freshness_checks.py  schema_checks.py
src/lineage/: emitter.py  models.py
src/observability/: metrics_collector.py  reporter.py
src/utils/: alerts.py  config.py  db.py
tests/: test_anomaly_checks.py  test_freshness_checks.py  test_lineage_emitter.py  test_schema_checks.py
